--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "highlight.js/styles/github.css";
 @import "katex/dist/katex.min.css";
 
 p:last-child {
@@ -10,19 +11,25 @@ p:last-child {
 		color-scheme: dark;
 	}
 
+	@import "highlight.js/styles/github-dark-dimmed.css";
+
+	/* 
 	.shiki,
 	.shiki span {
 		color: var(--shiki-dark) !important;
 		background-color: var(--shiki-dark-bg) !important;
 		/* 可选，如果你还希望同步字体样式 */
+	/*
 		font-style: var(--shiki-dark-font-style) !important;
 		font-weight: var(--shiki-dark-font-weight) !important;
 		text-decoration: var(--shiki-dark-text-decoration) !important;
-	}
+	} */
 }
 
 /* 代码样式 */
-.shiki {
+.shiki,
+.hljs {
+	display: block;
 	font-family: 'Fira Code', monospace;
 	font-size: 16px;
 	line-height: 1.5;
